fixed: invisible navigation labels could still receive hover events

--- a/src/stylesheets/vortex/main-window.scss
+++ b/src/stylesheets/vortex/main-window.scss
@@ -144,6 +144,7 @@
       overflow-x: visible;
       min-width: 0;
       display: inline-block;
+      pointer-events: none;
     }
     .badge {
       padding: 3px;
